Bug 392553 - Repositories are not fetched from github provider
Summary: Repositories are not fetched from github provider
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Project provider: Github (show other bugs)
Version: 5.2.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2018-03-31 09:05 UTC by Simone Gaiarin
Modified: 2018-04-06 06:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In: 5.2.2


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simone Gaiarin 2018-03-31 09:05:09 UTC
Steps to reproduce

1st case

1. Project > fetch project.. > Source: Github
2. In the source section select "User" and type "KDE"

Results: A notification appears briefly saying "waiting for response" and no repositories are displayed

2nd case

1. Project > fetch project.. > Source: Github
2. In the source section select clcik the button to configure Github account
3. Enter user and password
4. From the dropdown manu select my own user

Results: A notification appears briefly saying "waiting for response" and no repositories are displayed



Executing KDevelop from shell and enabling the logging with 
 
export QT_LOGGING_RULES="*.debug=true"

I didn't find any useful debug output regarding this problem.
Comment 1 Kevin Funk 2018-04-05 05:52:07 UTC
Would be happy if you could look into the issue. Looks like a great job to tackle for a new contributor to the KDevelop project.
Comment 2 Simone Gaiarin 2018-04-06 06:20:40 UTC
This should fix it

https://phabricator.kde.org/D11980

For reference: your comment and the junior-jobs tag was useful to convince me to look into this.
Comment 3 Kevin Funk 2018-04-06 06:34:49 UTC
Git commit 0de6a6a006a9f4ae981b26e2849f1ee8d1859558 by Kevin Funk, on behalf of Simone Gaiarin.
Committed on 06/04/2018 at 06:31.
Pushed by kfunk into branch '5.2'.

github: Fix Github repositories not fetched
FIXED-IN: 5.2.2

Reviewers: #kdevelop

Subscribers: kdevelop-devel

Differential Revision: https://phabricator.kde.org/D11980

M  +1    -1    plugins/ghprovider/ghresource.cpp

https://commits.kde.org/kdevelop/0de6a6a006a9f4ae981b26e2849f1ee8d1859558