github: Fix Github repositories not fetched

BUG: 392553
FIXED-IN: 5.2.2

Reviewers: #kdevelop

Subscribers: kdevelop-devel

Differential Revision: https://phabricator.kde.org/D11980